# antok

./: .gitignore  CMakeLists.txt  INSTALL  compileBoostPython.sh
cmakeModules/: CommonMacros.cmake  FindPYTHON.cmake  FindPython.cmake  FindROOT.cmake  FindYamlCpp.cmake
config/: default.yaml  example.yaml
pytok/bindings/: CMakeLists.txt  basic_calcs_py.cc  basic_calcs_py.cxx  basic_calcs_py.h  constants_py.cc  constants_py.cxx  constants_py.h  initializer_py.cc  initializer_py.cxx  initializer_py.h  pytok.cxx  rootConverters_py.cxx  rootConverters_py.h
pytok/helperScripts/: mcJob.py  phastJob.py  python_compiler.py
pytok/module/: __init__.py  logger.py  yamltok.py
pytok/module/mc/: __init__.py  _configuration.py  configuration.py  database.py
src/: CMakeLists.txt  KinematicFit.cxx  KinematicFit.h  NeutralFit.cxx  NeutralFit.h  NeutralProblem.cxx  NeutralProblem.h  basic_calcs.cxx  basic_calcs.h  beamfileGeneratorHelpers.cxx  beamfileGeneratorHelpers.h  beamfile_generator_5dBin.cxx  beamfile_generator_5dBin.h  beamfile_generator_5dCoord.cxx  beamfile_generator_5dCoord.h  beamfile_generator_helpers.cxx  beamfile_generator_helpers.h  charged_fit.cxx  charged_fit.h  charged_problem.cxx  charged_problem.h  constants.cxx  constants.h  constants.hpp  cut.hpp  cutter.cxx  cutter.h  data.cxx  data.h  data.hpp  event.cxx  event.h  function_generators.cxx  function_generators.h  functions.hpp  generators_cuts.cxx  generators_cuts.h  generators_functions.cxx  generators_functions.h  generators_plots.cxx  (+20 more)
tools/: CMakeLists.txt  compareRootFiles.py  compareRootFiles.py.requirements.txt  fillFiveDimHist.cxx  fitRPDResolutions.cxx  gen_kin.cxx  generateBeamfile.cxx  generateBeamfileTest.cxx  generateExampleFile.cxx  root_to_root.cxx  root_to_txt.cxx  run.py  runExample.sh  runParallel.py  tree2yaml.py  treereader.cxx
user/: ECALEnergyCalibration.txt  NNpoly.cxx  NNpoly.h  _user_template.cxx.tmpl  _user_template.h.tmpl  cdreis.cxx  cdreis.h  cdreis_functions.hpp  entryPoint.hpp  hubers.cxx  hubers.h  hubers_functions.hpp  jbeckers.cxx  jbeckers.h  jbeckers_functions.hpp  kbicker.cxx  kbicker.h  kbicker_functions.hpp  swallner.cxx  swallner.h  swallner_functions.hpp
